--- a/offerts.html
+++ b/offerts.html
@@ -1,85 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
+  <link rel="icon" href="img/patita-logo.png">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Document</title>
+  <title>Ofertas</title>
 </head>
+
 <body>
-  <div>
-    <header>
-      <nav>
-        <div class="nav-principal">
-          <ul>
-            <li><a href="#"><img src="img/logo1.svg"></a></li>
-            <li><a href="#">Catálogo</a></li>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">Nosotros</a></li>
-            <li><a href="#"><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></a></li>
-            <li><a href="#"><img src="img/user.svg" alt="Enlace hacia perfil"></a></li>
-          </ul>
-        </div>
-        <div>
-          <form>
-            <div class="search-input">
+  <div id="wrapper">
+    <div>
+      <header>
+        <nav>
+          <div class="nav-principal">
+            <ul>
+              <li><a href="#"><img src="img/logo1.svg"></a></li>
+              <li><a href="#">Catálogo</a></li>
+              <li><a href="#">Contacto</a></li>
+              <li><a href="#">Nosotros</a></li>
+              <li><a href="#"><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></a></li>
+              <li><a href="#"><img src="img/user.svg" alt="Enlace hacia perfil"></a></li>
+            </ul>
+          </div>
+          <div>
+            <form>
+              <div class="search-input">
                 <input type="search" class="search-input__bar" name="Email" placeholder="¡Busca un artículo!">
                 <input class="button--submit" src="img/lupa.svg" type="image">
+              </div>
+            </form>
+          </div>
+        </nav>
+      </header>
+    </div>
+    <div class="sections-container">
+      <div class="section-topic">
+        <a class="button-yellow--small2" href="#">Atrás</a>
+        <h2>Ofertas!</h2>
+      </div>
+      <div class="section-container">
+        <div class="products-info-container">
+          <div>
+            <div class="product-square__beige">
+              <img src="img/lazo1.png" alt="Lazo elegante para gato">
             </div>
-          </form>
+            <p>2x1 En lazos elegantes!</p>
+            <a class="button-yellow--small option-product " href="#">Ver</a>
+          </div>
+          <div>
+            <div class="product-square__beige">
+              <img src="img/pechera-Azul.png" alt="pechera para gato azul">
+            </div>
+            <p>20% En botitas para chihuahua</p>
+            <a class="button-yellow--small option-product " href="#">Ver</a>
+          </div>
         </div>
-      </nav>
-    </header>
-    <div>
-      <a class="button-yellow--small2" href="#">Atrás</a> <h2>Ofertas!</h2>
-    </div>
-    <div >
-      <div>
-        <div>
-          <img src="img/lazo1.png" alt="lazo con flores para gato">
-        </div>
-        <a class="button-yellow--small" href="#">Ver</a>
-        <h3>2x1 En lazos elegantes!</h3>
       </div>
-      <div>
-        <div>
-          <img src="img/pechera-Azul.png" alt="pechera color azul para gato">
+      <div class="section-container">
+        <div class="products-info-container">
+          <div>
+            <div class="product-square__beige">
+              <img src="img/taza-verde.png" alt="taza para gato color verde">
+            </div>
+            <p>Compra + regalía en collares</p>
+            <a class="button-yellow--small option-product " href="#">Ver</a>
+          </div>
+          <div>
+            <div class="product-square__beige">
+              <img src="img/collargrande.png" alt="collar grande para gato">
+            </div>
+            <p>15% En collares de cuero</p>
+            <a class="button-yellow--small option-product " href="#">Ver</a>
+          </div>
         </div>
-        <a class="button-yellow--small" href="#">Ver</a>
-        <h3>20% En botitas para chihuahua</h3>
       </div>
-    </div>
-    <div>
-      <div>
-        <div>
-          <img src="img/taza-verde.png" alt="taza de alimento color verde">
+      <div class="section-container">
+        <div class="products-info-container">
+          <div>
+            <div class="product-square__beige">
+              <img src="img/culoegato.png" alt="Monedero culito de gato">
+            </div>
+            <p>Compra 3 monederos + ragalía</p>
+            <a class="button-yellow--small option-product " href="#">Ver</a>
+          </div>
+          <div>
+            <div class="product-square__beige">
+              <img src="img/collares.png" alt="collares para gato">
+            </div>
+            <p>Collares para gato en Descuento!</p>
+            <a class="button-yellow--small option-product " href="#">Ver</a>
+          </div>
         </div>
-        <a class="button-yellow--small" href="#">Ver</a>
-        <h3>Compra + regalía en collares</h3>
-      </div>
-      <div>
-        <div>
-          <img src="img/collargrande.png" alt="collar grande para animales">
-        </div>
-        <a class="button-yellow--small" href="#">Ver</a>
-        <h3>15% En collares de cuero</h3>
-      </div>
-    </div>
-    <div>
-      <div>
-        <div>
-          <img src="img/collaresNAR.png" alt="collares negro, azul y rojo">
-        </div>
-        <a class="button-yellow--small" href="#">Ver</a>
-        <h3>Compra 3 monederos + ragalía</h3>
-      </div>
-      <div>
-        <div>
-          <img src="img/collares.png" alt="collares para animales">
-        </div>
-        <a class="button-yellow--small" href="#">Ver</a>
-        <h3>Collares para gato en Descuento!</h3>
       </div>
     </div>
   </div>
@@ -100,10 +119,12 @@
     </div>
     <div class="footer__social">
       <p>Redes Sociales</p>
-      <a href="https://www.facebook.com/messages/t/102359524991387"><img src="img/Messenger.svg" alt="Enlace vía Messenger"></a>
+      <a href="https://www.facebook.com/messages/t/102359524991387"><img src="img/Messenger.svg"
+          alt="Enlace vía Messenger"></a>
       <a href=""><img src="img/Telegram.svg" alt="Enlace vía Telegram"></a>
       <a href=""><img src="img/WhatsApp.svg" alt="Enlace vía WhatsApp"></a>
     </div>
   </footer>
 </body>
+
 </html>
