--- a/products.html
+++ b/products.html
@@ -5,93 +5,113 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
+  <link rel="icon" href="img/patita-logo.png">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Document</title>
+  <title>Products</title>
 </head>
 
 <body>
-  <div>
-      <div>
-    <header>
-      <nav>
-        <div class="nav-principal">
-          <ul>
-            <li><a href="#"><img src="img/logo1.svg"></a></li>
-            <li><a href="#">Catálogo</a></li>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">Nosotros</a></li>
-            <li><a href="#"><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></a></li>
-            <li><a href="#"><img src="img/user.svg" alt="Enlace hacia perfil"></a></li>
-          </ul>
+  <div id="wrapper">
+    <div>
+      <header>
+        <nav>
+          <div class="nav-principal">
+            <ul>
+              <li><a href="#"><img src="img/logo1.svg"></a></li>
+              <li><a href="#">Catálogo</a></li>
+              <li><a href="#">Contacto</a></li>
+              <li><a href="#">Nosotros</a></li>
+              <li><a href="#"><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></a></li>
+              <li><a href="#"><img src="img/user.svg" alt="Enlace hacia perfil"></a></li>
+            </ul>
+          </div>
+          <div>
+            <form>
+              <div class="search-input">
+                <input type="search" class="search-input__bar" name="Email" placeholder="¡Busca un artículo!">
+                <input class="button--submit" src="img/lupa.svg" type="image">
+              </div>
+            </form>
+          </div>
+        </nav>
+      </header>
+    </div>
+    <div class="sections-container">
+      <div class="section-container">
+        <div class="products-topic">
+          <p>Lo más nuevo!</p><a class="button-yellow--small" href="#">Ver</a>
         </div>
-        <div>
-          <form>
-            <div class="search-input">
-              <input type="search" class="search-input__bar" name="Email" placeholder="¡Busca un artículo!">
-              <input class="button--submit" src="img/lupa.svg" type="image">
+        <div class="products-info-container">
+          <div>
+            <div class="product-square">
+              <img src="img/bolsoCafe.png" alt="bolso de gato cafe">
             </div>
-          </form>
+            <div class="price-square">
+              <p class="price-position">₡18000 i.v.a</p>
+            </div>
+          </div>
+          <div>
+            <div class="product-square">
+              <img src="img/bolsoRosado.png" alt="bolso de gato rosado">
+            </div>
+            <div class="price-square">
+              <p class="price-position">₡15000 i.v.a</p>
+            </div>
+          </div>
         </div>
-      </nav>
-    </header>
-  </div>
-  <div>
-    <div class="first">
-      <p>Lo más nuevo!</p><a class="button-yellow--small" href="#">Ver</a>
-    </div>
-    <div>
-      <div>
-        <div>
-          <img src="img/bolsoCafe.png" alt="bolso de gato cafe">
-        </div>
-        <div>₡18000 i.v.a</div>
       </div>
-      <div>
-        <div class="second">
-          <img src="img/bolsoRosado.png" alt="bolso de gato rosado">
+      <div class="section-container">
+        <div class="products-topic">
+          <p>En tendencia!</p><a class="button-yellow--small" href="#">Ver</a>
         </div>
-        <div>₡15000 i.v.a</div>
+        <div class="products-info-container">
+          <div>
+            <div class=" product-square">
+              <img src="img/lazo1.png" alt="lazo de gato de flores">
+            </div>
+            <div class="price-square">
+              <p class="price-position">₡18000 i.v.a</p>
+            </div>
+          </div>
+          <div>
+            <div class="product-square">
+              <img src="img/culoegato.png" alt="culo de gato gris">
+            </div>
+            <div class="price-square">
+              <p class="price-position">₡6000 i.v.a</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section-container">
+        <div class="products-topic">
+          <p>Ofertas!</p><a class="button-yellow--small" href="#">Ver</a>
+        </div>
+        <div class="products-info-container">
+          <div>
+            <div class="product-square">
+              <img src="img/collares.png" alt="collares negro, azul y rojo">
+            </div>
+            <div class="price-square">
+              <p class="price-position">₡18000 i.v.a</p>
+            </div>
+          </div>
+          <div>
+            <div class="product-square">
+              <img src="img/collargrande.png" alt="collar con huesos dorados">
+            </div>
+            <div class="price-square">
+              <p class="price-position">₡6000 i.v.a</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  <div>
-    <div>
-      <p>En tendencia!</p><a class="button-yellow--small" href="#">Ver</a>
-    </div>
-    <div>
-      <div>
-        <div>
-          <img src="img/lazo1.png" alt="lazo de gato de flores">
-        </div>
-        <div>₡18000 i.v.a</div>
-      </div>
-      <div>
-        <div>
-          <img src="img/culoegato.png" alt="culo de gato gris">
-        </div>
-        <div>₡6000 i.v.a</div>
-      </div>
-    </div>
-  </div>
-  <div>
-    <div>
-      <p>En tendencia!</p><a class="button-yellow--small" href="#">Ver</a>
-    </div>
-    <div>
-      <div>
-        <div>
-          <img src="img/collares.png" alt="collares negro, azul y rojo">
-        </div>
-        <div>₡18000 i.v.a</div>
-      </div>
-      <div>
-        <div>
-          <img src="img/collargrande.png" alt="collar con huesos dorados">
-        </div>
-        <div>₡6000 i.v.a</div>
-      </div>
-    </div>
-  </div>
   </div>
   <footer class="footer">
     <div class="footer__copyright">
@@ -110,7 +130,8 @@
     </div>
     <div class="footer__social">
       <p>Redes Sociales</p>
-      <a href="https://www.facebook.com/messages/t/102359524991387"><img src="img/Messenger.svg" alt="Enlace vía Messenger"></a>
+      <a href="https://www.facebook.com/messages/t/102359524991387"><img src="img/Messenger.svg"
+          alt="Enlace vía Messenger"></a>
       <a href=""><img src="img/Telegram.svg" alt="Enlace vía Telegram"></a>
       <a href=""><img src="img/WhatsApp.svg" alt="Enlace vía WhatsApp"></a>
     </div>
