--- a/trending.html
+++ b/trending.html
@@ -1,86 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
+  <link rel="icon" href="img/patita-logo.png">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Document</title>
+  <title>Tendencia</title>
 </head>
+
 <body>
-  <div>
-    <a class="button-yellow--small2" href="#">Atrás</a> <h2>En tendencia!</h2>
-  </div>
-  <div >
+  <div id="wrapper">
     <div>
-      <div>
-        <img src="img/lazo1.png" alt="lazo para gatos de flores">
-      </div>
-      <a class="button-yellow--small" href="#">Ver</a>
-      <h3>Lazo elegante</h3>
+      <header>
+        <nav>
+          <div class="nav-principal">
+            <ul>
+              <li><a href="#"><img src="img/logo1.svg"></a></li>
+              <li><a href="#">Catálogo</a></li>
+              <li><a href="#">Contacto</a></li>
+              <li><a href="#">Nosotros</a></li>
+              <li><a href="#"><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></a></li>
+              <li><a href="#"><img src="img/user.svg" alt="Enlace hacia perfil"></a></li>
+            </ul>
+          </div>
+          <div>
+            <form>
+              <div class="search-input">
+                <input type="search" class="search-input__bar" name="Email" placeholder="¡Busca un artículo!">
+                <input class="button--submit" src="img/lupa.svg" type="image">
+              </div>
+            </form>
+          </div>
+        </nav>
+      </header>
     </div>
-    <div>
-      <div>
-        <img src="img/traje-navidenno.png" alt="traje navideno para gato">
+    <div class="sections-container">
+      <div class="section-topic">
+        <a class="button-yellow--small2" href="#">Atrás</a>
+        <h2>En tendencia!</h2>
       </div>
-      <a class="button-yellow--small" href="#">Ver</a>
-      <h3>Traje navideño</h3>
+      <div class="section-container">
+        <div class="products-info-container">
+          <div>
+            <div class="product-square__beige">
+              <img src="img/lazo1.png" alt="Lazo elegante para gato">
+            </div>
+            <p>Lazo elegante</p>
+            <a class="button-yellow--small option-product " href="#">Ver</a>
+          </div>
+          <div>
+            <div class="product-square__beige">
+              <img src="img/traje-navidenno.png" alt="Traje navideño para gato">
+            </div>
+            <p>Traje navideño</p>
+            <a class="button-yellow--small option-product " href="#">Ver</a>
+          </div>
+        </div>
+      </div>
+      <div class="section-container">
+        <div class="products-info-container">
+          <div>
+            <div class="product-square__beige">
+              <img src="img/pechera-Roja.png" alt="Pechera para gato roja">
+            </div>
+            <p>Pechera para gato</p>
+            <a class="button-yellow--small option-product " href="#">Ver</a>
+          </div>
+          <div>
+            <div class="product-square__beige">
+              <img src="img/culoegato.png" alt="Monedero culito de gato">
+            </div>
+            <p>Monedero culito de gato</p>
+            <a class="button-yellow--small option-product " href="#">Ver</a>
+          </div>
+        </div>
+      </div>
+      <div class="section-container">
+        <div class="products-info-container">
+          <div>
+            <div class="product-square__beige">
+              <img src="img/bolsoCafe.png" alt="Trasportadora tipo mochila color cafe">
+            </div>
+            <p>Trasportadora tipo mochila</p>
+            <a class="button-yellow--small option-product " href="#">Ver</a>
+          </div>
+          <div>
+            <div class="product-square__beige">
+              <img src="img/bolsoRosado.png" alt="Trasportadora tipo mochila rosado">
+            </div>
+            <p>Trasportadora tipo mochila</p>
+            <a class="button-yellow--small option-product " href="#">Ver</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div>
-    <div>
-      <div>
-        <img src="img/pechera-Roja.png" alt="pechera roja para gatos">
-      </div>
-      <a class="button-yellow--small" href="#">Ver</a>
-      <h3>Pechera para gato</h3>
+  <footer class="footer">
+    <div class="footer__copyright">
+      <img class="copyright" src="img/patita-logo.png">
+      <p>© 2022 Benito Shop. Todos los derechos reservados</p>
     </div>
-    <div>
-      <div>
-        <img src="img/culoegato.png" alt="monedero de gato con estilo de culo de gato">
-      </div>
-      <a class="button-yellow--small" href="#">Ver</a>
-      <h3>Monedero culito de gato</h3>
+    <div class="footer__questions">
+      <p>Preguntas Frecuentes</p>
+      <ul>
+        <li><img src="img/punto.png"> ¿Tienen tienda física?</li>
+        <li><img src="img/punto.png"> ¿Cada cuánto actualizan la página?</li>
+        <li><img src="img/punto.png"> ¿Cuánto tiempo dura mi pedido en llegar?</li>
+        <li><img src="img/punto.png"> ¿Cómo hago un pedido en línea?</li>
+        <li><img src="img/punto.png"> ¿Cómo puedo realizar una cotización?</li>
+      </ul>
     </div>
-  </div>
-  <div>
-    <div>
-      <div>
-        <img src="img/bolsoCafe.png" alt="bolso color cafe para gato">
-      </div>
-      <a class="button-yellow--small" href="#">Ver</a>
-      <h3>Trasportadora tipo mochila</h3>
+    <div class="footer__social">
+      <p>Redes Sociales</p>
+      <a href="https://www.facebook.com/messages/t/102359524991387"><img src="img/Messenger.svg"
+          alt="Enlace vía Messenger"></a>
+      <a href=""><img src="img/Telegram.svg" alt="Enlace vía Telegram"></a>
+      <a href=""><img src="img/WhatsApp.svg" alt="Enlace vía WhatsApp"></a>
     </div>
-    <div>
-      <div>
-        <img src="img/bolsoRosado.png" alt="bolso color rosado para gato">
-      </div>
-      <a class="button-yellow--small" href="#">Ver</a>
-      <h3>Trasportadora tipo mochila</h3>
-    </div>
-  </div>
-</div>
-<footer class="footer">
-  <div class="footer__copyright">
-    <img class="copyright" src="img/patita-logo.png">
-    <p>© 2022 Benito Shop. Todos los derechos reservados</p>
-  </div>
-  <div class="footer__questions">
-    <p>Preguntas Frecuentes</p>
-    <ul>
-      <li><img src="img/punto.png"> ¿Tienen tienda física?</li>
-      <li><img src="img/punto.png"> ¿Cada cuánto actualizan la página?</li>
-      <li><img src="img/punto.png"> ¿Cuánto tiempo dura mi pedido en llegar?</li>
-      <li><img src="img/punto.png"> ¿Cómo hago un pedido en línea?</li>
-      <li><img src="img/punto.png"> ¿Cómo puedo realizar una cotización?</li>
-    </ul>
-  </div>
-  <div class="footer__social">
-    <p>Redes Sociales</p>
-    <a href="https://www.facebook.com/messages/t/102359524991387"><img src="img/Messenger.svg" alt="Enlace vía Messenger"></a>
-    <a href=""><img src="img/Telegram.svg" alt="Enlace vía Telegram"></a>
-    <a href=""><img src="img/WhatsApp.svg" alt="Enlace vía WhatsApp"></a>
-  </div>
-</footer>
+  </footer>
 </body>
+
 </html>
